Added basic resistance calculation

--- a/BluePill/Debug/makefile
+++ b/BluePill/Debug/makefile
@@ -47,7 +47,7 @@ all: BluePill.elf secondary-outputs
 
 # Tool invocations
 BluePill.elf: $(OBJS) $(USER_OBJS) D:\ST_workspace\wokspace_1\bluePillTempSim\BluePill\STM32F103C8TX_FLASH.ld
-	arm-none-eabi-gcc -o "BluePill.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"D:\ST_workspace\wokspace_1\bluePillTempSim\BluePill\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="BluePill.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "BluePill.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"D:\ST_workspace\wokspace_1\bluePillTempSim\BluePill\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="BluePill.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
